--- a/index.html
+++ b/index.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista zadań</title>
 </head>
-<body>
+
+<body onload="init()">
     <h1>Lista zadań do wykonania:</h1>
     <h2>Witaj <span id="name"></span>, zadania do wykonania na dziś:</h2>
-
+    <div id="taskList"></div>
+    <input type="text" name="" id="task">
+    <button onclick="addTask()">Dodaj</button>
     <script>
-        if(window.localStorage.getItem('name') == null) {
-            //nie ma imienia zapisanego w localstorage
-            let name = window.prompt("Podaj swoje imię: ");
-            window.localStorage.setItem('name', name);
+        function init() {
+            if (window.localStorage.getItem('name') == null) {
+                //nie ma imienia zapisanego w localstorage
+                let name = window.prompt("Podaj swoje imię: ");
+                window.localStorage.setItem('name', name);
+            }
+            document.getElementById('name').innerHTML = window.localStorage.getItem('name');
+            showTasks();
         }
-        
-        document.getElementById('name').innerHTML = window.localStorage.getItem('name');
+        function addTask() {
+            let task = document.getElementById('task').value;
+            window.localStorage.setItem('task', task);
+            showTasks();
+        }
+        function showTasks() {
+            let taskList = document.getElementById('taskList');
+            taskList.innerHTML = window.localStorage.getItem('task');
+        }
     </script>
 </body>
+
 </html>
