--- a/index.html
+++ b/index.html
@@ -22,16 +22,31 @@
                 window.localStorage.setItem('name', name);
             }
             document.getElementById('name').innerHTML = window.localStorage.getItem('name');
+            let taskList = JSON.parse(window.localStorage.getItem('taskList'));
+            if(taskList == null) {
+                taskList = Array();
+                window.localStorage.setItem('taskList', 
+                                    JSON.stringify(taskList));
+            }
             showTasks();
         }
         function addTask() {
             let task = document.getElementById('task').value;
-            window.localStorage.setItem('task', task);
+            let taskList = JSON.parse(window.localStorage.getItem('taskList'));
+            taskList.push(task);
+            window.localStorage.setItem('taskList', JSON.stringify(taskList));
             showTasks();
         }
         function showTasks() {
-            let taskList = document.getElementById('taskList');
-            taskList.innerHTML = window.localStorage.getItem('task');
+            let taskListDiv = document.getElementById('taskList');
+            let taskArray = JSON.parse(window.localStorage.getItem('taskList'));
+            let buffer = "";
+            buffer += "<ul>";
+            for(let i=0; i< taskArray.length; i++) {
+                buffer += "<li>"+taskArray[i]+"</li>";
+            }
+            buffer += "</ul>";
+            taskListDiv.innerHTML = buffer;
         }
     </script>
 </body>
