--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             let taskList = JSON.parse(window.localStorage.getItem('taskList'));
             taskList.push(task);
             window.localStorage.setItem('taskList', JSON.stringify(taskList));
+            document.getElementById('task').value = "";
             showTasks();
         }
         function showTasks() {
@@ -43,10 +44,16 @@
             let buffer = "";
             buffer += "<ul>";
             for(let i=0; i< taskArray.length; i++) {
-                buffer += "<li>"+taskArray[i]+"</li>";
+                buffer += "<li><button onclick=\"removeTask("+i+")\">Usuń</button>"+taskArray[i]+"</li>";
             }
             buffer += "</ul>";
             taskListDiv.innerHTML = buffer;
+        }
+        function removeTask(i) {
+            let taskArray = JSON.parse(window.localStorage.getItem('taskList'));
+            taskArray.splice(i, 1);
+            window.localStorage.setItem('taskList', JSON.stringify(taskArray));
+            showTasks();
         }
     </script>
 </body>
